--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "react_template_repo",
+  "name": "Spect-Internships",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "This project contains an example project board meant to showcase how one can be used. The issues posted to it are not real issues.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha server/tests",
-    "install-all": "concurrently \"npm install\" \"cd client && npm install\"",
-    "client": "cd client && npm start",
+    "start": "node server",
     "server": "nodemon server/server.js",
-    "dev": "concurrently \"nodemon server/server.js\" \"cd client && npm run start\"",
-    "build": "cd client && npm build",
-    "start": "node server/server.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/UFWebApps/React_Template_Repo.git"
+    "url": "git+https://github.com/CEN3031-4A/Spect-Internships.git"
   },
   "keywords": [],
-  "author": "Dakota Rennemann",
-  "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "concurrently": "^4.1.0",
-    "express": "^4.17.1",
-    "mocha": "^6.2.1",
-    "mongoose": "^5.7.1",
-    "morgan": "^1.9.1",
-    "nodemon": "^1.18.10",
-    "should": "^13.2.3",
-    "supertest": "^4.0.2"
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/CEN3031-4A/Spect-Internships/issues"
   },
-  "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
+  "homepage": "https://github.com/CEN3031-4A/Spect-Internships#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^5.0.0",
+    "config": "^3.2.4",
+    "express": "^4.17.1",
+    "express-validator": "^6.2.0",
+    "gravatar": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.7",
+    "nodemon": "^1.19.4",
+    "request": "^2.88.0"
+  }
 }
