--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "bootstrap": "^4.3.1",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.10.1",
     "react-loader-spinner": "^3.1.4",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "react-toastify": "^5.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
