--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.1",
     "react-loader-spinner": "^3.1.4",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "start": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
