--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
   "author": "Dakota Rennemann",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "mocha": "^6.2.1",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.10",
+    "nodemon": "^1.19.4",
     "should": "^13.2.3",
     "supertest": "^4.0.2"
   },
