--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/UFWebApps/React_Template_Repo.git"
+    "url": "https://github.com/UFWebApps/React_Template_Repo.git"
   },
   "keywords": [],
   "author": "Dakota Rennemann",
   "license": "MIT",
   "dependencies": {
-     "body-parser": "^1.19.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -37,8 +36,5 @@
     "should": "^13.2.3",
     "supertest": "^4.0.2"
   },
-    "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme",
-  "bugs": {
-    "url": "https://github.com/UFWebApps/React_Template_Repo/issues"
-  }
+  "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
 }
