--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server/server.js",
+    "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -22,15 +22,17 @@
   "homepage": "https://github.com/CEN3031-4A/Spect-Internships#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "concurrently": "^5.0.0",
     "config": "^3.2.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.7",
-    "nodemon": "^1.19.4",
+    "mongoose": "^5.7.10",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "concurrently": "^5.0.0",
+    "nodemon": "^1.19.4"
   }
 }
