--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-confirm-alert": "^2.4.1",
-    "react-toastify": "^5.4.0"
+    "react-toastify": "^5.4.0",
     "react-dom": "^16.10.1",
     "react-loader-spinner": "^3.1.4",
     "react-scripts": "3.1.2"
