--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.1",
     "react-loader-spinner": "^3.1.4",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "react-toastify": "^5.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
