--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
+    "react-toastify": "^5.4.1",
     "should": "^13.2.3",
     "supertest": "^4.0.2"
   },
