--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spect_internships",
+  "name": "react_template_repo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,11 +7,10 @@
     "bootstrap": "^4.3.1",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-confirm-alert": "^2.4.1",
-    "react-toastify": "^5.4.0",
     "react-dom": "^16.10.1",
     "react-loader-spinner": "^3.1.4",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "react-toastify": "^5.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
