--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tinymce/tinymce-react": "^3.3.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.10.1",
+    "react-html-parser": "^2.0.2",
     "react-loader-spinner": "^3.1.4",
     "react-redux": "^7.1.3",
     "react-scripts": "3.1.2",
+    "react-stripe-elements": "^6.0.1",
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
