--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-loader-spinner": "^3.1.4",
     "request": "^2.88.0",
     "should": "^13.2.3",
+    "stripe": "^7.14.0",
     "supertest": "^4.0.2"
   },
   "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme",
