--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.1.2",
     "react-stripe-elements": "^6.0.1",
     "react-toastify": "^5.4.0",
+    "react-truncate": "^2.4.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
