--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^1.18.10",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-loader-spinner": "^3.1.4",
+    "react-truncate": "^2.4.0",
     "request": "^2.88.0",
     "should": "^13.2.3",
     "stripe": "^7.14.0",
